; ModuleID = '/home/carl/AnghaBench/systemd/src/boot/efi/extr_util.c_efivar_set.c'
source_filename = "/home/carl/AnghaBench/systemd/src/boot/efi/extr_util.c_efivar_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@loader_guid = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @efivar_set(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i32*, i32** %4, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = icmp ne i32* %9, null
  br i1 %10, label %11, label %17

11:                                               ; preds = %3
  %12 = load i32*, i32** %5, align 8
  %13 = call i32 @StrLen(i32* %12)
  %14 = add nsw i32 %13, 1
  %15 = sext i32 %14 to i64
  %16 = mul i64 %15, 4
  br label %18

17:                                               ; preds = %3
  br label %18

18:                                               ; preds = %17, %11
  %19 = phi i64 [ %16, %11 ], [ 0, %17 ]
  %20 = trunc i64 %19 to i32
  %21 = load i32, i32* %6, align 4
  %22 = call i32 @efivar_set_raw(i32* @loader_guid, i32* %7, i32* %8, i32 %20, i32 %21)
  ret i32 %22
}

declare dso_local i32 @efivar_set_raw(i32*, i32*, i32*, i32, i32) #1

declare dso_local i32 @StrLen(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
